--- a/index.html
+++ b/index.html
@@ -98,17 +98,6 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
-</html> 
-
-
-
-
-<!-- The puppy will be created dynamically by JavaScript -->
-
-
-
-
-
-
+</html>
